@@ -7,8 +7,9 @@ apt (0.8.15.2) unstable; urgency=high
   * apt-pkg/contrib/cdromutl.cc:
     - fix escape problem when looking for the mounted devices
   * apt-pkg/contrib/strutl.{h,cc}, test/libapt/strutil_test.cc:
-    - add new DeEscapeString() similar to DeQuoteQuotedWord but
-      unescape charackter escapes like \0XXX and \xXX (plus add test)
+    - add new DeEscapeString() similar to DeQuoteString but
+      unescape character escapes like \0XX and \xXX (plus added
+      test)
 
  -- Michael Vogt <mvo@debian.org>  Tue, 12 Jul 2011 11:54:47 +0200
 
